--- a/services/dolphin/public/index.html
+++ b/services/dolphin/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="fa">
 <head>
     <meta charset="utf-8"/>
     <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
